--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<script>
-// Auto-cache-bust ONCE if URL has no ?v=... (prevents stale pages on iPhone)
-(function () {
-  if (!sessionStorage.getItem('v_applied') && !/[?&]v=/.test(location.search)) {
-    sessionStorage.setItem('v_applied', '1');
-    const d = new Date();
-    const v = d.getFullYear().toString() + String(d.getMonth()+1).padStart(2,'0') + String(d.getDate()).padStart(2,'0');
-    location.replace(location.pathname + '?v=' + v + location.hash);
-  }
-})();
-
-// Register service worker (for offline + faster subsequent loads)
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js');
-}
-</script>
 <head>
-<link rel="manifest" href="manifest.webmanifest">
-<meta name="theme-color" content="#2b6df2">
 <meta charset="utf-8">
+<!-- Zoomed out a bit on iPhone -->
 <meta name="viewport" content="width=device-width, initial-scale=0.85, maximum-scale=1, user-scalable=no">
+
 <!-- Always fetch latest -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
+
 <title>Golf Practice Game — Pro Mobile</title>
+
+<!-- PWA hooks -->
+<link rel="manifest" href="manifest.webmanifest">
+<meta name="theme-color" content="#2b6df2">
+
 <style>
   :root { --gap:14px; --radius:12px; --ink:#0f0f12; --muted:#666; --line:#e9e9ee; --bg:#f6f7fb; --brand:#2b6df2; }
   * { box-sizing:border-box; -webkit-tap-highlight-color:transparent; }
-  body { margin:0; font-family: -apple-system, system-ui, Segoe UI, Roboto, Helvetica, Arial; background:linear-gradient(180deg,#fff,#f6f7fb); color:var(--ink); padding-bottom:88px; }
+  body { margin:0; font-family:-apple-system, system-ui, Segoe UI, Roboto, Helvetica, Arial; background:linear-gradient(180deg,#fff,#f6f7fb); color:var(--ink); padding-bottom:88px; }
   header { padding:16px; background:#0f0f12; color:#fff; position:sticky; top:0; z-index:10; }
   header h1 { margin:0; font-size:18px; }
   header .sub { opacity:.8; font-size:12px; }
-  main { display:grid; grid-template-columns:1fr; gap:var(--gap); padding:var(--gap); max-width:1100px; margin:0 auto; }
+  main { display:grid; grid-template-columns:1fr; gap:var(--gap); padding:12px; max-width:820px; margin:0 auto; }
   @media (min-width:980px){ main{ grid-template-columns:320px 1fr; } }
   .panel { background:#fff; border-radius:var(--radius); box-shadow:0 6px 24px rgba(15,17,24,.06), 0 1px 2px rgba(15,17,24,.06); }
-  .inner { padding:14px; }
+  .inner { padding:12px; }
   h2 { font-size:16px; margin:0 0 8px 0; }
   label { display:block; margin:10px 0 6px; font-weight:600; font-size:13px; }
   select,input[type="text"] { width:100%; padding:12px 14px; border:1px solid var(--line); border-radius:10px; font-size:16px; background:#fff; }
@@ -54,7 +44,7 @@ if ('serviceWorker' in navigator) {
   .task { border:1px dashed var(--line); padding:12px; border-radius:10px; margin:8px 0; }
   .task strong { font-weight:800; }
   .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap:var(--gap); }
-  .timer { font-variant-numeric: tabular-nums; font-weight:900; font-size:40px; margin-top:6px; }
+  .timer { font-variant-numeric:tabular-nums; font-weight:900; font-size:40px; margin-top:6px; }
   .bar { height:12px; background:#edf0f7; border-radius:999px; overflow:hidden; }
   .bar > span { display:block; height:100%; width:0%; background:linear-gradient(90deg,#2b6df2,#67b2f9); transition:width .25s ease; }
   table { width:100%; border-collapse:collapse; margin-top:8px; }
@@ -64,7 +54,21 @@ if ('serviceWorker' in navigator) {
   .actionbar .row { justify-content:space-between; }
   .actionbar .btn { flex:1 1 auto; margin:0 6px; }
 </style>
+
+<!-- Auto-version once + register SW -->
+<script>
+(function () {
+  if (!sessionStorage.getItem('v_applied') && !/[?&]v=/.test(location.search)) {
+    sessionStorage.setItem('v_applied', '1');
+    const d = new Date();
+    const v = d.getFullYear().toString() + String(d.getMonth()+1).padStart(2,'0') + String(d.getDate()).padStart(2,'0');
+    location.replace(location.pathname + '?v=' + v + location.hash);
+  }
+})();
+if ('serviceWorker' in navigator) { navigator.serviceWorker.register('service-worker.js'); }
+</script>
 </head>
+
 <body>
 <header>
   <h1>Golf Practice Game — Pro Mobile</h1>
@@ -94,7 +98,7 @@ if ('serviceWorker' in navigator) {
       </div>
       <div class="row" style="margin-top:8px; align-items:center;">
         <span class="pill" id="sessionIdPill"></span>
-        <span class="hint">Tip: Start will auto-generate if needed.</span>
+        <span class="hint">Start will auto-generate if needed.</span>
       </div>
 
       <hr style="margin:16px 0; border:none; border-top:1px solid var(--line)">
@@ -268,7 +272,7 @@ function renderScoring(buckets, sessionId){
 /* ---------- Timer ---------- */
 function flattenSegments(buckets){
   const segs = [];
-  Object.keys(buckets).forEach(cat=> buckets[cat].forEach(d=> segs.push({cat,name:d.name,secs:d.mins*60})));
+  Object.keys(buckets).forEach(cat=> buckets[cat].forEach(d=> segs.push({cat:cat, name:d.name, secs:d.mins*60})));
   return segs;
 }
 function fmt(s){ s=Math.max(0,s); const m=(s/60)|0, ss=s%60; return String(m).padStart(2,"0")+":"+String(ss).padStart(2,"0"); }
