--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
-<!-- Zoomed out a bit on iPhone -->
-<meta name="viewport" content="width=device-width, initial-scale=0.85, maximum-scale=1, user-scalable=no">
+<!-- Lock the scale so Safari doesn't zoom after content changes -->
+<meta name="viewport" content="width=device-width, initial-scale=0.85, minimum-scale=0.85, maximum-scale=0.85, user-scalable=no">
 
 <!-- Always fetch latest -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
@@ -19,17 +19,27 @@
 <style>
   :root { --gap:14px; --radius:12px; --ink:#0f0f12; --muted:#666; --line:#e9e9ee; --bg:#f6f7fb; --brand:#2b6df2; }
   * { box-sizing:border-box; -webkit-tap-highlight-color:transparent; }
-  body { margin:0; font-family:-apple-system, system-ui, Segoe UI, Roboto, Helvetica, Arial; background:linear-gradient(180deg,#fff,#f6f7fb); color:var(--ink); padding-bottom:88px; }
+
+  /* Prevent Safari auto text zooming, and any horizontal wiggle that can trigger reflow/zoom */
+  html, body { -webkit-text-size-adjust: 100%; }
+  body { margin:0; background:linear-gradient(180deg,#fff,#f6f7fb); color:var(--ink); font-family:-apple-system, system-ui, Segoe UI, Roboto, Helvetica, Arial; padding-bottom:88px; overflow-x:hidden; }
+
+  /* iOS zooms if inputs <16px; keep 16px while layout remains scaled via viewport */
+  input, select, textarea { font-size:16px; }
+
   header { padding:16px; background:#0f0f12; color:#fff; position:sticky; top:0; z-index:10; }
   header h1 { margin:0; font-size:18px; }
   header .sub { opacity:.8; font-size:12px; }
+
   main { display:grid; grid-template-columns:1fr; gap:var(--gap); padding:12px; max-width:820px; margin:0 auto; }
   @media (min-width:980px){ main{ grid-template-columns:320px 1fr; } }
+
   .panel { background:#fff; border-radius:var(--radius); box-shadow:0 6px 24px rgba(15,17,24,.06), 0 1px 2px rgba(15,17,24,.06); }
   .inner { padding:12px; }
   h2 { font-size:16px; margin:0 0 8px 0; }
   label { display:block; margin:10px 0 6px; font-weight:600; font-size:13px; }
-  select,input[type="text"] { width:100%; padding:12px 14px; border:1px solid var(--line); border-radius:10px; font-size:16px; background:#fff; }
+  select,input[type="text"] { width:100%; padding:12px 14px; border:1px solid var(--line); border-radius:10px; background:#fff; }
+
   .row { display:flex; gap:10px; align-items:center; flex-wrap:wrap; }
   .btn { padding:14px 16px; border:0; border-radius:12px; font-weight:800; font-size:16px; cursor:pointer; touch-action:manipulation; }
   .btn.primary { background:var(--brand); color:#fff; }
@@ -38,18 +48,23 @@
   .btn:disabled { opacity:.5; }
   .buttons-stack .btn { flex:1 1 auto; min-width:44%; }
   @media (max-width:480px){ .buttons-stack .btn { width:100%; } }
+
   .pill { padding:6px 10px; border-radius:999px; background:#f0f2f7; color:#394258; font-size:12px; }
   .hint { color:var(--muted); font-size:13px; }
   .section-title { margin:4px 0 8px; font-weight:800; text-transform:uppercase; letter-spacing:.6px; font-size:12px; color:#3f4658; }
+
   .task { border:1px dashed var(--line); padding:12px; border-radius:10px; margin:8px 0; }
   .task strong { font-weight:800; }
   .grid { display:grid; grid-template-columns: repeat(auto-fit, minmax(240px, 1fr)); gap:var(--gap); }
+
   .timer { font-variant-numeric:tabular-nums; font-weight:900; font-size:40px; margin-top:6px; }
   .bar { height:12px; background:#edf0f7; border-radius:999px; overflow:hidden; }
   .bar > span { display:block; height:100%; width:0%; background:linear-gradient(90deg,#2b6df2,#67b2f9); transition:width .25s ease; }
+
   table { width:100%; border-collapse:collapse; margin-top:8px; }
   th,td { text-align:left; padding:12px 8px; border-bottom:1px solid var(--line); font-size:14px; }
   .right { text-align:right; }
+
   .actionbar { position:fixed; left:0; right:0; bottom:0; z-index:20; background:rgba(255,255,255,.98); border-top:1px solid var(--line); padding:10px 12px; backdrop-filter:saturate(140%) blur(8px); }
   .actionbar .row { justify-content:space-between; }
   .actionbar .btn { flex:1 1 auto; margin:0 6px; }
